# uniffi-dart-test-project

./: Cargo.toml  README.md  build.rs  test_custom_type.dart
src/: api.udl  lib.rs
