[package]
name = "uniffi_dart_test_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
uniffi = { version = "0.29.0-alpha.1", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.29.3", features = ["build"] }
uniffi_dart = { path = "../uniffi-dart", package = "uniffi-dart", features = ["build"] } # <-- Path to our local uniffi-dart
camino = "1.1.6"

[features]
default = []
